--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -298,55 +298,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n\n\n\n\n\n\n\n\n\n"
-     ]
-    }
-   ],
+   "execution_count": 64,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "def make_sparse_vec(corpus_features, voc):\n",
     "    taille_voc = len(voc)\n",
     "    sparse_vecs = []\n",
     "    for word in corpus_features:\n",
-    "        vec_word = {}\n",
+    "        vec_word = {\"mot\":word[mot], \"gold_label\": word[gold], 'vec' : {}} # on associe le gold_label directement pour faciliter l'apprentissage, et le mot pour faciliter le débuggage\n",
     "        marqueur = 0 # initialisation du marqueur pour indiquer où on en est du remplissage du vecteur\n",
     "        for feature,value in word.items():\n",
     "            if isinstance(value, str) and not feature == gold : # si la valeur est une chaîne et ce n'est\n",
-    "                vec_word[marqueur + voc.get(value.lower())] = 1 # on ajoute une entrée au dictionnaire avec comme clé l'indice dans la liste (+ le marqueur, puisqu'on avance dans le vecteur) et comme clé 1\n",
+    "                vec_word[\"vec\"][marqueur + voc.get(value.lower())] = 1 # on ajoute une entrée au dictionnaire avec comme clé l'indice dans la liste (+ le marqueur, puisqu'on avance dans le vecteur) et comme clé 1\n",
     "                marqueur += taille_voc\n",
     "            elif isinstance(value, int) or isinstance(value, bool):\n",
     "                marqueur += 1\n",
     "                if not int(value) == 0:\n",
-    "                    vec_word[marqueur] = int(value) # on ajoute la valeur dans la case suivante, convertie en entier si c'était un booléen\n",
+    "                    vec_word[\"vec\"][marqueur] = int(value) # on ajoute la valeur dans la case suivante, convertie en entier si c'était un booléen\n",
     "        sparse_vecs.append(vec_word)\n",
-    "        print()\n",
     "    return sparse_vecs\n",
     "\n",
-    "gsd_train_vecs = make_sparse_vec(gsd_train_features[:10], gsd_train_voc)"
+    "gsd_train_vecs = make_sparse_vec(gsd_train_features, gsd_train_voc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Aperçus des features avant et après vectorisation\n\n({'mot': 'Les', 'gold_label': 'DET', 'préc': 'START', 'suiv': 'commotions', 'maj': True, 'all caps': False, 'nb': False, 'non alphanum': False, 'long': False, 'court': True, 'un caractère': False, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': False, 'suffixe verb': False}, {1033: 1, 64684: 1, 84755: 1, 119125: 1, 119130: 1})\n\n({'mot': 'commotions', 'gold_label': 'NOUN', 'préc': 'Les', 'suiv': 'cérébrales', 'maj': False, 'all caps': False, 'nb': False, 'non alphanum': False, 'long': False, 'court': True, 'un caractère': False, 'suffixe adv': False, 'suffixe nom': True, 'suffixe adj': False, 'suffixe verb': False}, {5339: 1, 40741: 1, 98556: 1, 119130: 1, 119133: 1})\n\n({'mot': 'cérébrales', 'gold_label': 'ADJ', 'préc': 'commotions', 'suiv': 'sont', 'maj': False, 'all caps': False, 'nb': False, 'non alphanum': False, 'long': False, 'court': True, 'un caractère': False, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': True, 'suffixe verb': False}, {19140: 1, 45047: 1, 91442: 1, 119130: 1, 119134: 1})\n\n({'mot': 'sont', 'gold_label': 'AUX', 'préc': 'cérébrales', 'suiv': 'devenu', 'maj': False, 'all caps': False, 'nb': False, 'non alphanum': False, 'long': False, 'court': True, 'un caractère': False, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': False, 'suffixe verb': False}, {12026: 1, 58848: 1, 91143: 1, 119130: 1})\n\n({'mot': 'devenu', 'gold_label': 'VERB', 'préc': 'sont', 'suiv': 'si', 'maj': False, 'all caps': False, 'nb': False, 'non alphanum': False, 'long': False, 'court': True, 'un caractère': False, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': True, 'suffixe verb': False}, {11727: 1, 51734: 1, 96060: 1, 119130: 1, 119134: 1})\n\n({'mot': 'si', 'gold_label': 'ADV', 'préc': 'devenu', 'suiv': 'courantes', 'maj': False, 'all caps': False, 'nb': False, 'non alphanum': False, 'long': True, 'court': False, 'un caractère': False, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': False, 'suffixe verb': False}, {16644: 1, 51435: 1, 112308: 1, 119129: 1})\n\n({'mot': 'courantes', 'gold_label': 'ADJ', 'préc': 'si', 'suiv': 'dans', 'maj': False, 'all caps': False, 'nb': False, 'non alphanum': False, 'long': False, 'court': True, 'un caractère': False, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': False, 'suffixe verb': False}, {32892: 1, 56352: 1, 79763: 1, 119130: 1})\n\n({'mot': 'dans', 'gold_label': 'ADP', 'préc': 'courantes', 'suiv': 'ce', 'maj': False, 'all caps': False, 'nb': False, 'non alphanum': False, 'long': False, 'court': True, 'un caractère': False, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': False, 'suffixe verb': False}, {347: 1, 72600: 1, 113601: 1, 119130: 1})\n\n({'mot': 'ce', 'gold_label': 'DET', 'préc': 'dans', 'suiv': 'sport', 'maj': False, 'all caps': False, 'nb': False, 'non alphanum': False, 'long': True, 'court': False, 'un caractère': False, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': False, 'suffixe verb': False}, {34185: 1, 40055: 1, 100597: 1, 119129: 1})\n\n({'mot': 'sport', 'gold_label': 'NOUN', 'préc': 'ce', 'suiv': \"qu'\", 'maj': False, 'all caps': False, 'nb': False, 'non alphanum': False, 'long': False, 'court': True, 'un caractère': False, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': False, 'suffixe verb': False}, {21181: 1, 73893: 1, 113285: 1, 119130: 1})\n"
+      "Aperçus des features avant et après vectorisation\n\n({'mot': ',', 'gold_label': 'PUNCT', 'préc': 'Weinstein', 'suiv': 'qui', 'maj': False, 'all caps': False, 'nb': False, 'non alphanum': True, 'long': True, 'court': False, 'un caractère': True, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': False, 'suffixe verb': False}, {'mot': ',', 'gold_label': 'PUNCT', 'vec': {32293: 1, 45385: 1, 79734: 1, 119128: 1, 119129: 1, 119131: 1}})\n\n({'mot': 'qui', 'gold_label': 'PRON', 'préc': ',', 'suiv': 'a', 'maj': False, 'all caps': False, 'nb': False, 'non alphanum': False, 'long': False, 'court': True, 'un caractère': False, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': False, 'suffixe verb': False}, {'mot': 'qui', 'gold_label': 'PRON', 'vec': {318: 1, 72001: 1, 101576: 1, 119130: 1}})\n\n({'mot': 'a', 'gold_label': 'AUX', 'préc': 'qui', 'suiv': 'co-arrangé', 'maj': False, 'all caps': False, 'nb': False, 'non alphanum': False, 'long': True, 'court': False, 'un caractère': True, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': False, 'suffixe verb': False}, {'mot': 'a', 'gold_label': 'AUX', 'vec': {22160: 1, 40026: 1, 84834: 1, 119129: 1, 119131: 1}})\n\n({'mot': 'co-arrangé', 'gold_label': 'VERB', 'préc': 'a', 'suiv': \"l'\", 'maj': False, 'all caps': False, 'nb': False, 'non alphanum': True, 'long': False, 'court': True, 'un caractère': False, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': True, 'suffixe verb': False}, {'mot': 'co-arrangé', 'gold_label': 'VERB', 'vec': {5418: 1, 61868: 1, 89750: 1, 119128: 1, 119130: 1, 119134: 1}})\n"
      ]
     }
    ],
    "source": [
     "print(\"Aperçus des features avant et après vectorisation\\n\")\n",
-    "print(*zip(gsd_train_features[:10] ,gsd_train_vecs[:10]), sep=\"\\n\\n\")"
+    "print(*zip(gsd_train_features[1034:1038] ,gsd_train_vecs[1034:1038]), sep=\"\\n\\n\")"
    ]
   },
   {
@@ -354,11 +347,9 @@
     "## Implémentation de l'algorithme de classification\n",
     "On a choisi d'implémenter la classification avec un perceptron moyenné.\n",
     "\n",
-    "Etiquettes du corpus : ADJ, ADP, ADV, AUX, CCONJ, DET, INTJ, NOUN, NUM, PART, PRON, PROPN, PUNCT, SCONJ, SYM, VERB, X\n",
-    "\n",
     "Sources : cours 3/12 + perceptron.pdf + zoom du 17/12\n",
     "\n",
-    "Je comprends pas comment on doit gérer les mots : comment on peut les ajouter ou les enlever de nos vecteurs ?!"
+    "La fonction predict sera utilisée à la fois dans l'apprentissage et dans la \"prédiction\". Elle correspond à la recherche de l'étiquette avec le plus grand score (argmax...)"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -367,47 +358,64 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'shuffle' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-40-75e1e9f9df98>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0mpoids_gsd_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mperceptron_train\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgsd_train_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-40-75e1e9f9df98>\u001b[0m in \u001b[0;36mperceptron_train\u001b[0;34m(training_set, MAX_EPOCH)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mMAX_EPOCH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraining_set\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtag\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtags\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# initialisé du vecteur de poids\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mshuffled_set\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraining_set\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# on mélange le training set\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mphrase\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mshuffled_set\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'shuffle' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def perceptron_train(training_set, MAX_EPOCH=10):\n",
+    "def predict(word_features, weights):\n",
+    "    \"\"\"Renvoie l'étiquette avec le plus gros score\"\"\"\n",
+    "    scores = {}\n",
+    "    for tag, w in weights.items():\n",
+    "        scores[tag] =  sum(word_features.get(feat)*w.get(feat, 0) for feat in word_features)\n",
+    "    return max(scores, key=scores.get)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from random import shuffle\n",
+    "\n",
+    "def perceptron_train(training_set, voc, MAX_EPOCH=1): # ça serait une bonne idée de faire une classe pour éviter d'avoir à redonner le vocabulaire en argument à chaque fois par exemple\n",
     "    \n",
     "    tags = [\"ADJ\", \"ADP\", \"ADV\", \"AUX\", \"CCONJ\", \"DET\", \"INTJ\", \"NOUN\", \"NUM\", \"PART\", \"PRON\", \"PROPN\", \"PUNCT\", \"SCONJ\", \"SYM\", \"VERB\", \"X\"]\n",
     "\n",
     "    # TODO initialisation des poids : à zéros ou bien de manière aléatoire ??\n",
-    "    a = [[0]*len(training_set[0]) for tag in tags] # poids moyennés\n",
-    "    # un vecteur de poids par classe - plutôt un dictionnaire ? FIXME\n",
     "\n",
+    "    # initialisation de a (poids totaux)\n",
+    "    a = {}\n",
+    "    for tag in tags:\n",
+    "        a[tag] = {}\n",
+    "    \n",
     "    for i in range(0, MAX_EPOCH):\n",
-    "        w = [[0]*len(training_set[0]) for tag in tags] # initialisé du vecteur de poids\n",
-    "        shuffled_set = shuffle(training_set.copy()) # on mélange le training set\n",
     "\n",
-    "        for phrase in shuffled_set:\n",
-    "            for word in phrase:\n",
-    "                prediction = max()\n",
-    "                # on cherche le tag le plus probable... mais comment ?... \n",
-    "                \n",
-    "                # on compare avec le gold_label\n",
-    "                # si mauvaise prédiction\n",
-    "                    #  on ajoute x(i) à chaque poids de l'étiquette correcte\n",
-    "                    #  on retire x(i) à chaque poids de l'étiquette mal prédite\n",
+    "        # initialisation des vecteurs de poids\n",
+    "        w = {}\n",
+    "        for tag in tags:\n",
+    "            w[tag] = {}\n",
     "\n",
+    "        shuffled_set = training_set.copy() # copie du training set\n",
+    "        shuffle(shuffled_set) # mélange du training set\n",
+    "\n",
+    "        for word in shuffled_set:\n",
+    "            prediction = predict(word['vec'], w)\n",
+    "            # print(word[mot], word[gold], prediction)\n",
+    "            if not word[gold] == \"_\" and not prediction == word[gold]: # si le gold_label n'est pas égal à celui prédit\n",
+    "                # on ignore les mots dont le gold_label est \"_\" (\"au\" et \"du\") car ils sont ensuite analysés comme (à le, de le)\n",
+    "\n",
+    "                for feat in word['vec']:\n",
+    "                    w[word[gold]][feat] = w[word[gold]].get(feat,0) + word['vec'].get(feat) #  on ajoute x(i) à chaque poids de l'étiquette correcte\n",
+    "                    w[prediction][feat] = w[prediction].get(feat,0) - word['vec'][feat] #  on retire x(i) à chaque poids de l'étiquette mal prédite\n",
+    "           \n",
     "        # on ajoute w à a\n",
+    "        for tag in w:\n",
+    "            for index in w[tag].keys(): \n",
+    "                a[tag][index] = a[tag].get(index, 0) + w[tag][index]\n",
     "    return a\n",
     "\n",
-    "poids_gsd_train = perceptron_train(gsd_train_features)"
+    "poids_gsd_train = perceptron_train(gsd_train_vecs, gsd_train_voc)"
    ]
   },
   {
