--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -240,19 +240,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "({'mot Les': 1, 'prec : START': 1, 'mot_suiv commotions': 1, 'maj': 1, 'court': 1}, 'DET')\n({'mot commotions': 1, 'prec : Les': 1, 'mot_suiv cérébrales': 1, 'court': 1, 'suff_noun': 1}, 'NOUN')\n({'mot cérébrales': 1, 'prec : commotions': 1, 'mot_suiv sont': 1, 'court': 1, 'suff_adj': 1}, 'ADJ')\n({'mot sont': 1, 'prec : cérébrales': 1, 'mot_suiv devenu': 1, 'court': 1}, 'AUX')\n({'mot devenu': 1, 'prec : sont': 1, 'mot_suiv si': 1, 'court': 1, 'suff_adj': 1}, 'VERB')\n({'mot si': 1, 'prec : devenu': 1, 'mot_suiv courantes': 1, 'long': 1}, 'ADV')\n({'mot courantes': 1, 'prec : si': 1, 'mot_suiv dans': 1, 'court': 1}, 'ADJ')\n({'mot dans': 1, 'prec : courantes': 1, 'mot_suiv ce': 1, 'court': 1}, 'ADP')\n({'mot ce': 1, 'prec : dans': 1, 'mot_suiv sport': 1, 'long': 1}, 'DET')\n({'mot sport': 1, 'prec : ce': 1, \"mot_suiv qu'\": 1, 'court': 1}, 'NOUN')\n"
+      "({'mot avec': 1, 'prec : reviendrais': 1, 'mot_suiv plaisir': 1, 'court': 1}, 'ADP')\n({'mot plaisir': 1, 'prec : avec': 1, 'mot_suiv !': 1, 'court': 1}, 'NOUN')\n({'mot !': 1, 'prec : plaisir': 1, 'mot_suiv END': 1, 'nonAlphanum': 1, 'long': 1, 'un_car': 1}, 'PUNCT')\n({'mot Les': 1, 'prec : START': 1, 'mot_suiv forfaits': 1, 'maj': 1, 'court': 1}, 'DET')\n({'mot forfaits': 1, 'prec : Les': 1, 'mot_suiv comprennent': 1, 'court': 1}, 'NOUN')\n({'mot comprennent': 1, 'prec : forfaits': 1, 'mot_suiv le': 1, 'court': 1}, 'VERB')\n({'mot le': 1, 'prec : comprennent': 1, 'mot_suiv transport': 1, 'long': 1}, 'DET')\n({'mot transport': 1, 'prec : le': 1, 'mot_suiv en': 1, 'court': 1}, 'NOUN')\n({'mot en': 1, 'prec : transport': 1, 'mot_suiv car': 1, 'long': 1}, 'ADP')\n({'mot car': 1, 'prec : en': 1, 'mot_suiv Grand': 1, 'court': 1}, 'NOUN')\n"
      ]
     }
    ],
    "source": [
-    "print(*gsd_train_features_gold[:10], sep=\"\\n\")"
+    "print(*gsd_train_features_gold[100:110], sep=\"\\n\")"
    ]
   },
   {
@@ -346,13 +346,13 @@
     "    a = {}\n",
     "    for tag in tags:\n",
     "        a[tag] = {}\n",
-    "    \n",
-    "    for i in range(0, MAX_EPOCH):\n",
-    "        # initialisation des vecteurs de poids\n",
-    "        w = {}\n",
+    "\n",
+    "    # initialisation des vecteurs de poids\n",
+    "    w = {}\n",
     "        for tag in tags:\n",
     "            w[tag] = {}\n",
-    "\n",
+    "    \n",
+    "    for i in range(0, MAX_EPOCH):\n",
     "        shuffled_set = training_set.copy() # copie du training set\n",
     "        shuffle(shuffled_set) # mélange du training set\n",
     "\n",
