modif faites ensemble

--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
@@ -168,17 +168,17 @@
     "            # dictionnaire de features du mot\n",
     "            features_mot = { \n",
     "                # on récupère le gold_label correspondant\n",
-    "                f\"mot {word}\" : 1,\n",
-    "                f\"prec : {prev}\" : 1,\n",
-    "                f\"mot_suiv {suiv}\" : 1,\n",
+    "                f\"mot - {word}\" : 1,\n",
+    "                f\"prec - {prev}\" : 1,\n",
+    "                f\"mot_suiv - {suiv}\" : 1,\n",
     "                }\n",
     "            \n",
     "            if word.istitle(): features_mot[\"maj\"] = 1 \n",
     "            if word.isupper(): features_mot[\"all_caps\"] = 1\n",
     "            if any(char.isdigit() for char in word): features_mot[\"num\"] = 1# mieux que isnumeric(), car renvoie false si espace (40 000) ou virgule (50,6) par ex\n",
     "            if not word.isalnum(): features_mot[\"nonAlphanum\"] = 1\n",
-    "            if len(word) < 3: features_mot[\"long\"] = 1 \n",
-    "            if len(word) >= 3: features_mot[\"court\"] = 1\n",
+    "            if len(word) <= 3: features_mot[\"court\"] = 1 \n",
+    "            if len(word) > 3: features_mot[\"long\"] = 1\n",
     "            if len(word) == 1: features_mot[\"un_car\"] = 1\n",
     "            if word.endswith(\"ment\"): features_mot[\"suff_adv\"] = 1\n",
     "            if any(word.endswith(elem) and len(word) != len(elem) for elem in list_noun): features_mot[\"suff_noun\"] =1 \n",
@@ -200,14 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "364349\n{\"mot qu'\": 1, 'prec : sport': 1, 'mot_suiv on': 1, 'nonAlphanum': 1, 'court': 1}\n{'mot on': 1, \"prec : qu'\": 1, 'mot_suiv les': 1, 'long': 1}\n{'mot les': 1, 'prec : on': 1, 'mot_suiv considére': 1, 'court': 1}\n{'mot considére': 1, 'prec : les': 1, 'mot_suiv presque': 1, 'court': 1}\n{'mot presque': 1, 'prec : considére': 1, 'mot_suiv comme': 1, 'court': 1, 'suff_adj': 1}\n"
+      "364349\n{\"mot - qu'\": 1, 'prec - sport': 1, 'mot_suiv - on': 1, 'nonAlphanum': 1, 'court': 1}\n{'mot - on': 1, \"prec - qu'\": 1, 'mot_suiv - les': 1, 'court': 1}\n{'mot - les': 1, 'prec - on': 1, 'mot_suiv - considére': 1, 'court': 1}\n{'mot - considére': 1, 'prec - les': 1, 'mot_suiv - presque': 1, 'long': 1}\n{'mot - presque': 1, 'prec - considére': 1, 'mot_suiv - comme': 1, 'long': 1, 'suff_adj': 1}\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
@@ -240,14 +240,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "({'mot avec': 1, 'prec : reviendrais': 1, 'mot_suiv plaisir': 1, 'court': 1}, 'ADP')\n({'mot plaisir': 1, 'prec : avec': 1, 'mot_suiv !': 1, 'court': 1}, 'NOUN')\n({'mot !': 1, 'prec : plaisir': 1, 'mot_suiv END': 1, 'nonAlphanum': 1, 'long': 1, 'un_car': 1}, 'PUNCT')\n({'mot Les': 1, 'prec : START': 1, 'mot_suiv forfaits': 1, 'maj': 1, 'court': 1}, 'DET')\n({'mot forfaits': 1, 'prec : Les': 1, 'mot_suiv comprennent': 1, 'court': 1}, 'NOUN')\n({'mot comprennent': 1, 'prec : forfaits': 1, 'mot_suiv le': 1, 'court': 1}, 'VERB')\n({'mot le': 1, 'prec : comprennent': 1, 'mot_suiv transport': 1, 'long': 1}, 'DET')\n({'mot transport': 1, 'prec : le': 1, 'mot_suiv en': 1, 'court': 1}, 'NOUN')\n({'mot en': 1, 'prec : transport': 1, 'mot_suiv car': 1, 'long': 1}, 'ADP')\n({'mot car': 1, 'prec : en': 1, 'mot_suiv Grand': 1, 'court': 1}, 'NOUN')\n"
+      "({'mot - avec': 1, 'prec - reviendrais': 1, 'mot_suiv - plaisir': 1, 'long': 1}, 'ADP')\n({'mot - plaisir': 1, 'prec - avec': 1, 'mot_suiv - !': 1, 'long': 1}, 'NOUN')\n({'mot - !': 1, 'prec - plaisir': 1, 'mot_suiv - END': 1, 'nonAlphanum': 1, 'court': 1, 'un_car': 1}, 'PUNCT')\n({'mot - Les': 1, 'prec - START': 1, 'mot_suiv - forfaits': 1, 'maj': 1, 'court': 1}, 'DET')\n({'mot - forfaits': 1, 'prec - Les': 1, 'mot_suiv - comprennent': 1, 'long': 1}, 'NOUN')\n({'mot - comprennent': 1, 'prec - forfaits': 1, 'mot_suiv - le': 1, 'long': 1}, 'VERB')\n({'mot - le': 1, 'prec - comprennent': 1, 'mot_suiv - transport': 1, 'court': 1}, 'DET')\n({'mot - transport': 1, 'prec - le': 1, 'mot_suiv - en': 1, 'long': 1}, 'NOUN')\n({'mot - en': 1, 'prec - transport': 1, 'mot_suiv - car': 1, 'court': 1}, 'ADP')\n({'mot - car': 1, 'prec - en': 1, 'mot_suiv - Grand': 1, 'court': 1}, 'NOUN')\n"
      ]
     }
    ],
@@ -274,11 +274,11 @@
    "outputs": [],
    "source": [
     "def predict(word_features, weights):\n",
-    "    \"\"\"Renvoie l'étiquette avec le plus gros score\"\"\"\n",
+    "    \"\"\"Renvoie l'étiquette avec le plus gros score (argmax)\"\"\"\n",
     "    scores = {}\n",
     "    for tag, w in weights.items():\n",
     "        scores[tag] =  sum(word_features.get(feat)*w.get(feat, 0) for feat in word_features)\n",
-    "    print(scores)\n",
+    "    # print(scores)\n",
     "    return max(scores, key=scores.get)"
    ]
   },
@@ -340,8 +340,6 @@
     "    \n",
     "    tags = [\"ADJ\", \"ADP\", \"ADV\", \"AUX\", \"CCONJ\", \"DET\", \"INTJ\", \"NOUN\", \"NUM\", \"PART\", \"PRON\", \"PROPN\", \"PUNCT\", \"SCONJ\", \"SYM\", \"VERB\", \"X\"]\n",
     "\n",
-    "    # TODO initialisation des poids : à zéros ou bien de manière aléatoire ??\n",
-    "\n",
     "    # initialisation de a (poids totaux)\n",
     "    a = {}\n",
     "    for tag in tags:\n",
@@ -357,14 +355,14 @@
     "        shuffle(shuffled_set) # mélange du training set\n",
     "\n",
     "        for word in shuffled_set:\n",
-    "            print(\"Scores avant modif\")\n",
-    "            prediction = predict(word['vec'], w)\n",
-    "            print(f\"\\\"{word[mot]}\\\"\\t{prediction}\\t{word[gold]}\\t\")\n",
-    "            if not word[gold] == \"_\" and not prediction == word[gold]: # si le gold_label n'est pas égal à celui prédit\n",
+    "            # print(\"Scores avant modif\")\n",
+    "            prediction = predict(word['vec'], w) # trouve étiquette plus probable\n",
+    "            # print(f\"\\\"{word[mot]}\\\"\\t{prediction}\\t{word[gold]}\\t\")\n",
+    "            gold = word[1]\n",
+    "            if not gold == \"_\" and not prediction == gold: # si le gold_label n'est pas égal à celui prédit\n",
     "                # on ignore les mots dont le gold_label est \"_\" (\"au\" et \"du\") car ils sont ensuite analysés comme (à le, de le)\n",
-    "                # print(\"ERREUR\\n\")\n",
-    "                for feat in word['vec']:\n",
-    "                    w[word[gold]][feat] = w[word[gold]].get(feat,0) + word['vec'].get(feat) #  on ajoute x(i) à chaque poids de l'étiquette correcte\n",
+    "                for feat in word[0]: # pour chaque feature du mot\n",
+    "                    w[gold][feat] = w[word[gold]].get(feat,0) + word['vec'].get(feat) #  on ajoute x(i) à chaque poids de l'étiquette correcte\n",
     "                    w[prediction][feat] = w[prediction].get(feat,0) - word['vec'][feat] #  on retire x(i) à chaque poids de l'étiquette mal prédite\n",
     "        # on ajoute w à a\n",
     "                print(\"Scores après modif\")\n",
