--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -40,14 +40,13 @@
   {
    "source": [
     "## Import du corpus\n",
-    "Cours Zoom du 17/12 - 35 min\n",
     "\n",
     "On charge les trois corpus *in-domain* sous la forme de listes de dictionnaires : chaque phrase a une clé \"mots\" qui est associée à une liste des mots, et une clé \"POS\" associée à une liste de POS. \n",
     "\n",
     "On utilise les trois corpus distincts de French-GSD :\n",
     "- Train : apprentissage.\n",
     "- Dev : validation. Pour tester et améliorer le modèle. \n",
-    "- Test : évaluation. On ne l'utilisera pas pendant l'apprentissage ou le test."
+    "- Test : évaluation. On ne l'utilisera pas pendant l'apprentissage ou les tests."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -118,8 +117,8 @@
     "- longueur du mot (3 caractéristiques binaires) : a 1 seule caractère, a moins de 3 caractères, a plus de 3 caractères.\n",
     "- a un suffixe nominal\n",
     "- a un suffixe adjectival\n",
-    "- a un suffixe verbal (ça marche que sur les lemmes !)\n",
-    "- a un suffixe adverbial (là ça marche sur la forme fléchie)\n",
+    "- a un suffixe verbal\n",
+    "- a un suffixe adverbial\n",
     "\n",
     "On ne conserve plus la structure des phrases, qui n'est plus nécessaire une fois qu'on a extrait les informations comme mot précédent et mot suivant.\n",
     "\n",
@@ -159,8 +158,6 @@
     "            # création de triplets (mot précédent, mot, mot suivant)\n",
     "            # avec \"START\" en prev pour le 1er mot\n",
     "            # et \"END\" en suiv pour le dernier\n",
-    "\n",
-    "            # lemma = phrase[\"lemme\"][phrase[\"mots\"].index(word)] \n",
     "\n",
     "            # dictionnaire de features du mot\n",
     "            if feat_mots :\n",
@@ -265,8 +262,6 @@
     "## Implémentation de l'algorithme de classification\n",
     "On a choisi d'implémenter la classification avec un perceptron moyenné.\n",
     "\n",
-    "Sources : cours 3/12 + perceptron.pdf + zoom du 17/12\n",
-    "\n",
     "La fonction predict sera utilisée à la fois dans l'apprentissage et dans la \"prédiction\". Elle correspond à la recherche de l'étiquette avec le plus grand score (argmax...)"
    ],
    "cell_type": "markdown",
@@ -298,7 +293,7 @@
    "source": [
     "from random import shuffle\n",
     "\n",
-    "def perceptron_train(training_set, voc, MAX_EPOCH=2): # ça serait une bonne idée de faire une classe pour éviter d'avoir à redonner le vocabulaire en argument à chaque fois par exemple\n",
+    "def perceptron_train(training_set, voc, MAX_EPOCH=2):\n",
     "    \n",
     "    tags = [\"ADJ\", \"ADP\", \"ADV\", \"AUX\", \"CCONJ\", \"DET\", \"INTJ\", \"NOUN\", \"NUM\", \"PART\", \"PRON\", \"PROPN\", \"PUNCT\", \"SCONJ\", \"SYM\", \"VERB\", \"X\"]\n",
     "\n",
