--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -293,7 +293,7 @@
    "source": [
     "from random import shuffle\n",
     "\n",
-    "def perceptron_train(training_set, voc, MAX_EPOCH=2):\n",
+    "def perceptron_train(training_set, voc, MAX_EPOCH=3):\n",
     "    \n",
     "    tags = [\"ADJ\", \"ADP\", \"ADV\", \"AUX\", \"CCONJ\", \"DET\", \"INTJ\", \"NOUN\", \"NUM\", \"PART\", \"PRON\", \"PROPN\", \"PUNCT\", \"SCONJ\", \"SYM\", \"VERB\", \"X\"]\n",
     "\n",
@@ -314,18 +314,14 @@
     "        for word in shuffled_set:\n",
     "            vec = word[0]\n",
     "            gold = word[1]\n",
-    "          #  print(\"Scores avant modif\")\n",
     "            prediction = predict(vec, w) # trouve étiquette plus probable\n",
-    "           # print(f\"\\\"{vec}\\\"\\t{prediction}\\t{gold}\\t\")\n",
     "            if not gold == \"_\" and not prediction == gold: # si le gold_label n'est pas égal à celui prédit\n",
     "                # on ignore les mots dont le gold_label est \"_\" (\"au\" et \"du\") car ils sont ensuite analysés comme (à le, de le)\n",
     "                for feat in vec: # pour chaque feature du mot\n",
     "                    w[gold][feat] = w[gold].get(feat,0) + vec.get(feat) #  on ajoute x(i) à chaque poids de l'étiquette correcte\n",
     "                    w[prediction][feat] = w[prediction].get(feat,0) - vec[feat] #  on retire x(i) à chaque poids de l'étiquette mal prédite\n",
     "        # on ajoute w à a\n",
-    "               # print(\"Scores après modif\")\n",
     "                predict(vec, w)\n",
-    "         #   print(\"\\n\")\n",
     "\n",
     "        for tag in w:\n",
     "            for index in w[tag].keys(): \n",
@@ -378,8 +374,8 @@
     "        if not gold == \"_\" and not prediction == gold:\n",
     "            nb_erreurs +=1\n",
     "            #output.write(\"ERREUR\")\n",
-    "        else:\n",
-    "            output.write(\"OK\")\n",
+    "        #else:\n",
+    "            #output.write(\"OK\")\n",
     "        #output.write(\"\\n\")\n",
     "    \n",
     "    #output.write(f\"Nombre d\\'erreurs : {nb_erreurs}\")\n",
@@ -451,21 +447,22 @@
   },
   {
    "source": [
-    "On remarque qu'à partir de 2 ou 3 itérations on descend en dessous de 5% d'erreurs, mais que des itérations additionnelles n'améliorent pas beaucoup ce taux, en tout cas pas assez par rapport au temps additionnel que demande l'entraînement avec ces itérations additionnelles. Nous choisissont donc 2 itérations par défaut."
+    "On remarque qu'à partir de 2 ou 3 itérations on descend en dessous de 5% d'erreurs, mais que des itérations additionnelles n'améliorent pas beaucoup ce taux, en tout cas pas assez par rapport au temps additionnel que demande l'entraînement avec ces itérations additionnelles. Nous choisissont donc 3 itérations par défaut."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "On peut maintenant se demander si on pourrait obtenir des taux similaires avec moins de features. Pour cela on réeffectue un apprentissage avec 2 itérations, sans modifier l'extraction de caractéristiques. Puis on teste différentes combinaisons d'extractions de features sur le corpus dev avant d'effectuer le test : seulement les mots (mot, mot précédent et mot suivant), et tout sauf les mots. On pourrait bien sûr tester bien d'autres combinaisons. Les features non extraites sur le corpus dev valent donc toutes zéro pour ce corpus et ne seront pas prises en compte."
+    "### Evaluation des caractéristiques\n",
+    "On peut maintenant se demander si on pourrait obtenir des taux similaires avec moins de features. Pour cela on réeffectue un apprentissage avec 3 itérations, sans modifier l'extraction de caractéristiques. Puis on teste différentes combinaisons d'extractions de features sur le corpus dev avant d'effectuer le test : seulement les mots (mot, mot précédent et mot suivant), et tout sauf les mots. On pourrait bien sûr tester bien d'autres combinaisons. Les features non extraites sur le corpus dev valent donc toutes zéro pour ce corpus et ne seront pas prises en compte."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,15 +471,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Test avec seulement les mots : 9.960%\n",
-      "Test avec tout sauf les mots : 67.559%\n"
+      "Test avec seulement les mots : 9.752%\n",
+      "Test avec tout sauf les mots : 71.333%\n"
      ]
     }
    ],
@@ -501,24 +498,24 @@
   },
   {
    "source": [
-    "On remarque que sans la prise en compte des mots le résultat est catastrophique ! Avec seulement les mots on fait 2 fois plus d'erreurs que si on prend en compte l'ensemble des caractéristiques. Tester quelques combinaisons de mots + autres caractéristiques :"
+    "On remarque que sans la prise en compte des mots le résultat est catastrophique ! Avec seulement les mots on fait environ 2 fois plus d'erreurs que si on prend en compte l'ensemble des caractéristiques. Tester quelques combinaisons de mots + autres caractéristiques :"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Test avec mots + longueur : 11.131%\n",
-      "Test avec mots + maj : 5.887%\n",
-      "Test avec mots + caractères non alphanumériques : 8.388%\n",
-      "Test avec mots + suffixes : 9.520%\n"
+      "Test avec mots + longueur : 9.943%\n",
+      "Test avec mots + maj : 6.233%\n",
+      "Test avec mots + caractères non alphanumériques : 8.480%\n",
+      "Test avec mots + suffixes : 9.355%\n"
      ]
     }
    ],
@@ -532,6 +529,68 @@
   {
    "source": [
     "A partir de ces tests non exhaustifs, il semblerait que la prise en compte des majuscules apporte beaucoup de précision, tandis que la prise en compte des autres caractéristiques seules, en plus des mots, apporte beaucoup moins de précision et pourrait peut-être être éliminés."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Précision sur mots hors vocabulaire\n",
+    "Suite à ces tests, on peut imaginer que la précision sur les mots hors-vocabulaire doit être très faible, car les autres caractéristiques semblent insuffisantes. Testons cette hypothèse. ASSEZ COMPLIQUE A TESTER CAR IL FAUT RECUPERER LE MOT DANS LA CLEF DU VECTEUR \"mot - truc\". Avec des regex ? Est-ce très important vu ce qu'on dit avant ?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Erreurs fréquentes\n",
+    "On peut analyser les erreurs les plus fréquentes à l'aide d'une matrice de confusion."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Prédictions   ADJ   ADP   ADV   AUX  CCONJ   DET  INTJ  NOUN  NUM  PART  PRON  \\\nRéférences                                                                      \nADJ          1739     0     8     0      0     6     0   124    6     0    15   \nADP             0  5729     0     2      0     5     0     1    0     0     0   \nADV            13     7  1234     6      1     0     0     9    0     0     0   \nAUX             1     0     2  1080      0     0     0     5    0     0     0   \nCCONJ           0     0     4     1    879     0     0     0    0     0     0   \nDET             5    28     1     0      0  5467     0     1    6     0     4   \nINTJ            0     0     1     0      0     0     3     0    0     0     0   \nNOUN           66     1    11     6      1     3     1  6297    6     0     2   \nNUM             0     0     0     0      0     7     0     3  938     0     0   \nPART            0     0     2     0      0     0     0     0    0     6     0   \nPRON            8    10     1     0      0    51     0     2    3     0  1425   \nPROPN          24     3     0     0      0     0     0    69   15     0     5   \nPUNCT           0     0     0     0      0     0     0     0    0     0     0   \nSCONJ           0     1     1     0      0     0     0     0    0     0     3   \nSYM             0     0     0     0      0     0     0     1    1     0     0   \nVERB           90     4     5    43      0     0     0   115    1     0     0   \nX               5     1     1     0      0     2     0     9    3     0     0   \n_              49     0   237     0     35     0     0    74    0     0     0   \nAll          2000  5784  1508  1138    916  5541     4  6710  979     6  1454   \n\nPrédictions  PROPN  PUNCT  SCONJ  SYM  VERB    X    All  \nRéférences                                               \nADJ             56      0      0    0   234   13   2201  \nADP              0      0      6    0     1    7   5751  \nADV              8      0     22    0     6    1   1307  \nAUX              1      0      0    0    34    1   1124  \nCCONJ            0      0      0    0     0    0    884  \nDET              2      0      0    0     0    0   5514  \nINTJ             1      0      0    0     0    0      5  \nNOUN           217      0      0    0   102   16   6729  \nNUM              9      0      0    0     2    0    959  \nPART             0      0      1    0     0    0      9  \nPRON             5      0     33    0     1    3   1542  \nPROPN         2446      0      0    1     6   65   2634  \nPUNCT            0   3804      0    0     0    0   3804  \nSCONJ            0      0    250    0     1    0    256  \nSYM              5      0      0   54     0    0     61  \nVERB            30      0      0    0  2490    3   2781  \nX               52      0      0    1     1   82    157  \n_               25      0      1    1   615   20   1057  \nAll           2857   3804    313   57  3493  211  36775  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# matrice de confusion avec Pandas. source : https://stackoverflow.com/questions/2148543/how-to-write-a-confusion-matrix-in-python\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "def matrice_confusion(corpus_feat, poids):\n",
+    "    predictions = []\n",
+    "    gold = []\n",
+    "\n",
+    "    for word in corpus_feat:\n",
+    "        predictions.append(predict(word[0], poids))\n",
+    "        gold.append(word[1])\n",
+    "\n",
+    "    preds = pd.Series((item for item in predictions), name = \"Prédictions\")\n",
+    "    refs = pd.Series((item for item in gold), name = \"Références\")\n",
+    "    matrice_confusion = pd.crosstab(refs, preds, margins=True)\n",
+    "    print(matrice_confusion)\n",
+    "\n",
+    "matrice_confusion(gsd_dev_features_gold, poids_gsd_train)"
+   ]
+  },
+  {
+   "source": [],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "Analyse de la matrice de confusion...."
    ],
    "cell_type": "markdown",
    "metadata": {}
